<resources>
    <string name="app_name">Star Wars</string>
    <!--nav-->
    <string name="nav_label_home">Categories</string>
    <string name="nav_label_films">Films</string>
    <string name="nav_label_films_details">Films Details</string>
    <string name="nav_label_characters">Characters</string>
    <string name="nav_label_characters_details">Characters Details</string>
    <string name="nav_label_favorites">Favorites</string>
    <string name="nav_label_last_seen">Last Seen</string>
    <!--    home-->
    <string name="home_title">Categories</string>
    <string name="home_empty_categories">🤡 Empty categories</string>
    <string name="home_error_categories">🥴 Something wrong</string>
    <string name="home_img_logo_description">logo star wars</string>
    <string name="home_img_category_description">image category star wars</string>
    <string name="home_toast_not_implemented">🤧 Not implemented yet</string>
    <!--    films-->
    <string name="films_title">Films</string>
    <string name="films_search_hint">Search by title</string>
    <string name="films_empty_films">🤡 Empty films</string>
    <string name="films_icon_back">image to back</string>
    <!--    characters-->
    <string name="characters_title">Characters</string>
    <string name="characters_search_hint">Search by name</string>
    <string name="characters_icon_back">image to back</string>
    <string name="characters_empty_characters">🤡 Empty characters</string>
    <!--    characters footer-->
    <string name="characters_footer_msg">Could not load</string>
    <!--    films details-->
    <string name="films_details_title">Films Details</string>
    <string name="films_details_img_film_description">image film</string>
    <string name="films_details_director"><b>Director:</b> %1$s</string>
    <string name="films_details_producer"><b>Producer(s):</b> %1$s</string>
    <string name="films_details_opening_crawl">%1$s</string>
    <string name="films_details_related_characters">Related Characters</string>
    <string name="fragments_films_details">image to favorite</string>
    <!--    characters details-->
    <string name="characters_details_name">Characters Details</string>
    <string name="characters_details_img_characters_description">image characters</string>
    <string name="characters_details_homeworld">Homeworld</string>
    <string name="characters_details_birth"><b>Birth Year:</b> %1$s</string>
    <string name="characters_details_gender"><b>Gender:</b> %1$s</string>
    <string name="characters_details_height"><b>Height:</b> %1$s</string>
    <string name="characters_details_mass"><b>Mass:</b> %1$s</string>
    <string name="characters_details_hair"><b>Hair Color:</b> %1$s</string>
    <string name="characters_details_skin"><b>Skin Color:</b> %1$s</string>
    <string name="characters_details_opening_crawl">%1$s</string>
    <string name="characters_details_related_films">Related Films</string>
    <!--    grid-->
    <string name="grid_img_grid_description">image from category</string>
    <string name="grid_icon_back">image to back</string>
    <string name="grid_icon_favorite">image to favorite</string>
    <string name="grid_error">🥴 Something wrong</string>
    <!--    favorites-->
    <string name="favorites_title">Favorites</string>
    <string name="favorites_search_hint">Search favorites</string>
    <string name="favorites_empty_films">🤡 Empty favorites</string>
    <string name="favorites_icon_back">image to back</string>
    <string name="favorites_characters">Characters</string>
    <string name="favorites_films">Films</string>
    <!--    last seen-->
    <string name="grid_img_last_seen_description">image from last seen</string>
</resources>
