<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characters_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragments_characters_details_constraint_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragments_characters_details_constraint_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fragment_characters_details_img_button_back"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_dp"
                android:layout_marginStart="@dimen/screen_padding_large"
                android:layout_marginTop="@dimen/screen_padding_extra_large"
                android:contentDescription="@string/films_icon_back"
                android:src="@drawable/ic_action_back"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_characters_details_text_name"
                app:layout_constraintEnd_toStartOf="@+id/fragment_characters_details_text_name"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_characters_details_text_name"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:gravity="end|center_vertical"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_characters_details_img_button_back"
                app:layout_constraintTop_toTopOf="@+id/fragment_characters_details_img_button_back"
                tools:text="Luke Skywalker" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fragments_characters_details_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/title_size_large"
                android:background="@color/black"
                android:contentDescription="@string/characters_details_img_characters_description"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/fragment_characters_details_text_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/fragment_characters_details_img_button_back"
                app:layout_constraintTop_toBottomOf="@+id/fragment_characters_details_img_button_back"
                app:shapeAppearanceOverlay="@style/roundedCornersImageViewCharacter"
                tools:src="@drawable/logo_yellow" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/fragments_character_details_image_favorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/screen_padding_large"
            android:contentDescription="@string/fragments_films_details"
            android:padding="@dimen/screen_padding_small"
            android:src="@drawable/ic_action_not_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_constraint_image" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragments_characters_details_constraint_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragments_character_details_image_favorite">

            <ViewAnimator
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/fragments_characters_details_homeword_text"
                app:layout_constraintBottom_toBottomOf="@+id/fragments_characters_details_homeworld_image"
                app:layout_constraintStart_toEndOf="@id/guideline_info"
                android:background="@android:color/darker_gray" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_info"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragments_characters_details_homeword_text"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_padding_large"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:maxLines="1"
                android:text="@string/characters_details_homeworld"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toStartOf="@+id/guideline_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Homeworld" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fragments_characters_details_homeworld_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:background="@color/black"
                android:contentDescription="@string/characters_details_img_characters_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/fragments_characters_details_skin"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline_info"
                app:layout_constraintStart_toStartOf="@+id/fragments_characters_details_homeword_text"
                app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_homeword_text"
                app:shapeAppearanceOverlay="@style/roundedCornersImageViewHomeworld"
                tools:src="@drawable/homeword" />


            <TextView
                android:id="@+id/fragments_characters_details_birth"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_info"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Birth Year: 19BBY" />

            <TextView
                android:id="@+id/fragments_characters_details_gender"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_info"
                app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_birth"
                tools:text="Gender: Male" />

            <TextView
                android:id="@+id/fragments_characters_details_height"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_info"
                app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_gender"
                tools:text="Height: 172cm" />

            <TextView
                android:id="@+id/fragments_characters_details_mass"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_info"
                app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_height"
                tools:text="Mass: 77kg" />

            <TextView
                android:id="@+id/fragments_characters_details_hair"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_info"
                app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_mass"
                tools:text="Hair Color: Blond" />

            <TextView
                android:id="@+id/fragments_characters_details_skin"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_padding_medium"
                android:layout_marginEnd="@dimen/screen_padding_large"
                android:layout_marginBottom="@dimen/screen_padding_large"
                android:gravity="end"
                android:maxLines="1"
                android:textSize="@dimen/title_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_info"
                app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_hair"
                tools:text="Skin Color: Fair" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/fragments_characters_details_related_films"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding_large"
            android:layout_marginTop="@dimen/screen_padding_medium"
            android:layout_marginEnd="@dimen/screen_padding_large"
            android:text="@string/characters_details_related_films"
            android:textSize="@dimen/title_size_large"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_constraint_info"
            tools:text="Related Characters" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragments_characters_details_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_padding_large"
            android:layout_marginTop="@dimen/screen_padding_medium"
            android:layout_marginEnd="@dimen/screen_padding_large"
            android:layout_marginBottom="@dimen/screen_padding_medium"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragments_characters_details_related_films"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>